Devops-Deployment.yml
apiVersion: "v1""
kind: Deployment
metadata:
  name: devops-deployment
  labels:
    name: devops
    env: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      name: devops
  template:
    metadata:
      labels:
        name: devops
    spec:
      containers:
      - name: devopsweb
        image: "devops quay url"
        ports:
        - containerPort: 1020
