Devops-DeploymentConfig.yml
apiVersion:  apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: dc-devops
  labels:
    name: devops
    env: dev
spec:
  replicas: 3
  selector:
    #matchLabels:
      name: devops
  template:
    metadata:
      labels:
        name: devops
    spec:
        containers:
          - name: devopsweb
            image: arvindvijaya/hellodevopsdocker:v1
            ports:
                - containerPort: 8000
                  name: http
                  protocol: TCP
        imagePullSecrets:
          - name: arvind-secret-key
        restartPolicy: Always
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - devopsweb
      from:
        kind: ImageStreamTag
        name: hellodevops:latest
    type: ImageChange
