Devops-Pod.yml
apiVersion: "v1"
kind: Pod
metadata:
  name: web-devops
  labels:
    name: devops
    env: dev
spec:
  containers:
    - name: devopsweb
      image: arvindvijaya/hellodevopsdocker:latest
      ports:
        - containerPort: 80
          name: http
          protocol: TCP
  imagePullSecrets:
    - name: arvind-secret-key
